outputs/error_25409938.log
2025/03/23 00:16:48 routes.go:1187: INFO server config env="map[CUDA_VISIBLE_DEVICES:0 GPU_DEVICE_ORDINAL:0 HIP_VISIBLE_DEVICES: HSA_OVERRIDE_GFX_VERSION: HTTPS_PROXY: HTTP_PROXY: NO_PROXY: OLLAMA_DEBUG:true OLLAMA_FLASH_ATTENTION:false OLLAMA_GPU_OVERHEAD:0 OLLAMA_HOST:http://127.0.0.1:11434 OLLAMA_INTEL_GPU:false OLLAMA_KEEP_ALIVE:2h0m0s OLLAMA_KV_CACHE_TYPE: OLLAMA_LLM_LIBRARY: OLLAMA_LOAD_TIMEOUT:5m0s OLLAMA_MAX_LOADED_MODELS:0 OLLAMA_MAX_QUEUE:128 OLLAMA_MODELS:/pfs/work7/workspace/scratch/ma_ssiu-ollama_models/.ollama/models OLLAMA_MULTIUSER_CACHE:false OLLAMA_NOHISTORY:false OLLAMA_NOPRUNE:false OLLAMA_NUM_PARALLEL:8 OLLAMA_ORIGINS:[http://localhost https://localhost http://localhost:* https://localhost:* http://127.0.0.1 https://127.0.0.1 http://127.0.0.1:* https://127.0.0.1:* http://0.0.0.0 https://0.0.0.0 http://0.0.0.0:* https://0.0.0.0:* app://* file://* tauri://* vscode-webview://*] OLLAMA_SCHED_SPREAD:false ROCR_VISIBLE_DEVICES:0 http_proxy: https_proxy: no_proxy:]"
time=2025-03-23T00:16:48.933+01:00 level=INFO source=images.go:432 msg="total blobs: 26"
time=2025-03-23T00:16:48.936+01:00 level=INFO source=images.go:439 msg="total unused blobs removed: 0"
time=2025-03-23T00:16:48.938+01:00 level=INFO source=routes.go:1238 msg="Listening on 127.0.0.1:11434 (version 0.5.7)"
time=2025-03-23T00:16:48.938+01:00 level=DEBUG source=common.go:80 msg="runners located" dir=/pfs/data5/software_uc2/bwhpc/common/cs/ollama/0.5.7/lib/ollama/runners
time=2025-03-23T00:16:48.939+01:00 level=DEBUG source=common.go:124 msg="availableServers : found" file=/pfs/data5/software_uc2/bwhpc/common/cs/ollama/0.5.7/lib/ollama/runners/cpu_avx/ollama_llama_server
time=2025-03-23T00:16:48.939+01:00 level=DEBUG source=common.go:124 msg="availableServers : found" file=/pfs/data5/software_uc2/bwhpc/common/cs/ollama/0.5.7/lib/ollama/runners/cpu_avx2/ollama_llama_server
time=2025-03-23T00:16:48.939+01:00 level=DEBUG source=common.go:124 msg="availableServers : found" file=/pfs/data5/software_uc2/bwhpc/common/cs/ollama/0.5.7/lib/ollama/runners/cuda_v11_avx/ollama_llama_server
time=2025-03-23T00:16:48.939+01:00 level=DEBUG source=common.go:124 msg="availableServers : found" file=/pfs/data5/software_uc2/bwhpc/common/cs/ollama/0.5.7/lib/ollama/runners/cuda_v12_avx/ollama_llama_server
time=2025-03-23T00:16:48.939+01:00 level=DEBUG source=common.go:124 msg="availableServers : found" file=/pfs/data5/software_uc2/bwhpc/common/cs/ollama/0.5.7/lib/ollama/runners/rocm_avx/ollama_llama_server
time=2025-03-23T00:16:48.939+01:00 level=INFO source=routes.go:1267 msg="Dynamic LLM libraries" runners="[cuda_v12_avx rocm_avx cpu cpu_avx cpu_avx2 cuda_v11_avx]"
time=2025-03-23T00:16:48.939+01:00 level=DEBUG source=routes.go:1268 msg="Override detection logic by setting OLLAMA_LLM_LIBRARY"
time=2025-03-23T00:16:48.939+01:00 level=DEBUG source=sched.go:105 msg="starting llm scheduler"
time=2025-03-23T00:16:48.939+01:00 level=INFO source=gpu.go:226 msg="looking for compatible GPUs"
time=2025-03-23T00:16:48.958+01:00 level=DEBUG source=gpu.go:99 msg="searching for GPU discovery libraries for NVIDIA"
time=2025-03-23T00:16:48.958+01:00 level=DEBUG source=gpu.go:517 msg="Searching for GPU library" name=libcuda.so*
time=2025-03-23T00:16:48.958+01:00 level=DEBUG source=gpu.go:543 msg="gpu library search" globs="[/pfs/data5/software_uc2/bwhpc/common/cs/ollama/0.5.7/lib/ollama/libcuda.so* /pfs/data5/software_uc2/bwhpc/common/cs/ollama/0.5.7/lib/ollama/libcuda.so* /opt/bwhpc/common/cs/ollama/0.5.7/lib/ollama/libcuda.so* /usr/local/cuda*/targets/*/lib/libcuda.so* /usr/lib/*-linux-gnu/nvidia/current/libcuda.so* /usr/lib/*-linux-gnu/libcuda.so* /usr/lib/wsl/lib/libcuda.so* /usr/lib/wsl/drivers/*/libcuda.so* /opt/cuda/lib*/libcuda.so* /usr/local/cuda/lib*/libcuda.so* /usr/lib*/libcuda.so* /usr/local/lib*/libcuda.so*]"
time=2025-03-23T00:16:48.960+01:00 level=DEBUG source=gpu.go:576 msg="discovered GPU libraries" paths="[/usr/lib/libcuda.so.550.54.15 /usr/lib64/libcuda.so.550.54.15]"
initializing /usr/lib/libcuda.so.550.54.15
library /usr/lib/libcuda.so.550.54.15 load err: /usr/lib/libcuda.so.550.54.15: wrong ELF class: ELFCLASS32
time=2025-03-23T00:16:48.960+01:00 level=DEBUG source=gpu.go:627 msg="skipping 32bit library" library=/usr/lib/libcuda.so.550.54.15
initializing /usr/lib64/libcuda.so.550.54.15
dlsym: cuInit - 0x148cf5e3aef0
dlsym: cuDriverGetVersion - 0x148cf5e3af10
dlsym: cuDeviceGetCount - 0x148cf5e3af50
dlsym: cuDeviceGet - 0x148cf5e3af30
dlsym: cuDeviceGetAttribute - 0x148cf5e3b030
dlsym: cuDeviceGetUuid - 0x148cf5e3af90
dlsym: cuDeviceGetName - 0x148cf5e3af70
dlsym: cuCtxCreate_v3 - 0x148cf5e3b210
dlsym: cuMemGetInfo_v2 - 0x148cf5e45190
dlsym: cuCtxDestroy - 0x148cf5e9f7f0
calling cuInit
calling cuDriverGetVersion
raw version 0x2f08
CUDA driver version: 12.4
calling cuDeviceGetCount
device count 1
time=2025-03-23T00:16:49.192+01:00 level=DEBUG source=gpu.go:134 msg="detected GPUs" count=1 library=/usr/lib64/libcuda.so.550.54.15
[GPU-699c47d8-3091-4fde-3356-ebb5fc95b09c] CUDA totalMem 80995 mb
[GPU-699c47d8-3091-4fde-3356-ebb5fc95b09c] CUDA freeMem 80511 mb
[GPU-699c47d8-3091-4fde-3356-ebb5fc95b09c] Compute Capability 9.0
time=2025-03-23T00:16:49.424+01:00 level=DEBUG source=amd_linux.go:421 msg="amdgpu driver not detected /sys/module/amdgpu"
releasing cuda driver library
time=2025-03-23T00:16:49.424+01:00 level=INFO source=types.go:131 msg="inference compute" id=GPU-699c47d8-3091-4fde-3356-ebb5fc95b09c library=cuda variant=v12 compute=9.0 driver=12.4 name="NVIDIA H100 PCIe" total="79.1 GiB" available="78.6 GiB"
  File "/pfs/work7/workspace/scratch/ma_ssiu-myspace/teapot/1_optimized.py", line 67
    prompts = [prompt_template.invoke({"input": query + q + ".", , "title": title}) for q in batch]
                                                                 ^
SyntaxError: invalid syntax
